# gyaan_doc

./: .gitignore  agent.ipynb  agent.py  chat_history.json  gyaan_doc.py  main.py  pyproject.toml  stats.json  test.ipynb  utils.py
Agents/: chroma.sqlite3
embeddings/: chroma.sqlite3
