[project]
name = "gyaan-doc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "altair>=5.5.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.61",
    "langchain-groq>=0.3.2",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.5",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pydantic>=2.11.5",
    "pypdf>=5.5.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
]
